@@ -1,10 +1,12 @@
 Revision history for Test-Software-License
 
 {{$NEXT}}
+ - switch to List::AllUtils
 
 0.003_07 2014-09-20T20:53:20Z
  - we now have a working meta license and resourse.license with comparisom
    working
+ - switch to File::Slurp::Tiny
 
 0.002000 2013-11-07T19:49:42Z +0000 GMT
  - rename and relocate software-licence.t
